2010-04-22 Borut Razem <borut.razem AT siol.net>

	* support/cpp/libcpp/charset.c, support/cpp/libcpp/directives.c,
	  support/cpp/libcpp/errors.c, support/cpp/libcpp/expr.c,
	  support/cpp/libcpp/files.c, support/cpp/libcpp/identifiers.c,
	  support/cpp/libcpp/include/cpp-id-data.h,
	  support/cpp/libcpp/include/cpplib.h,
	  support/cpp/libcpp/include/line-map.h,
	  support/cpp/libcpp/include/symtab.h, support/cpp/libcpp/init.c,
	  support/cpp/libcpp/internal.h, support/cpp/libcpp/lex.c,
	  support/cpp/libcpp/line-map.c, support/cpp/libcpp/macro.c,
	  support/cpp/libcpp/mkdeps.c, support/cpp/libcpp/symtab.c,
	  support/cpp/libcpp/traditional.c, support/cpp/libiberty/filenames.h,
	  support/cpp/libiberty/hashtab.c, support/cpp/libiberty/hashtab.h,
	  support/cpp/libiberty/obstack.h, support/cpp/libiberty/safe-ctype.h,
	  support/cpp/libiberty/splay-tree.h, support/cpp/sdcpp.c,
	  support/cpp/sdcpp.h, support/cpp/sdcpp-opts.c:
	  SDCPP synchronized with GCC CPP release version 4.5.0

2010-04-14 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure, sim/ucsim/configure.in, sim/ucsim/ddconfig_in.h:
	  fixed bug #2986676: ucz80 fails to run z80 regtests on Solaris
	  SPARC platform
	* sdccconf_in.h: corrected endianness detection on solaris
	* debugger/mcs51/symtab.c, debugger/mcs51/configure,
	  debugger/mcs51/Makefile.in, debugger/mcs51/simi.c,
	  debugger/mcs51/cmd.c, debugger/mcs51/symtab.h,
	  debugger/mcs51/configure.in, debugger/mcs51/sdcdb.c,
	  debugger/mcs51/config.h.in, debugger/mcs51/break.c:
	  code cleaning: removed warnings, added -Wall c compiler flag, ...

2010-04-12 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic/libsdcc/*.[cS], device/lib/pic/*.[cS]:
	  sdcc library license changed to GPL+LE

2010-04-11 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure.in:
	  define CXXFLAGS
	* device/lib/pic/libm/expf.c:
	  corrected typo
	* device/include/mcs51/uPSD32xx.h:
	  sdcc library license changed to GPL+LE
